# threaded-avx-simd

./: CMakeLists.txt  README.md  reduce_op_with_threads.cpp  reduce_op_with_threads_and_simd.cpp
common/: api.h
reduce_op/: reduce_sum_baseline.cpp
sort_op/: bitonic_sort_with_simd.cpp
src/: CMakeLists.txt
src/matmul_op/: matmul_with_simd.cpp
src/matmul_op/include/: matmul_with_simd.h
src/reduce_op/: reduce_sum_with_threads_and_simd.cpp
src/reduce_op/include/: reduce_sum_with_threads_and_simd.h
src/sort_op/: bitonic_sort_with_simd.cpp
src/sort_op/include/: bitonic_sort_with_simd.h
test/: CMakeLists.txt
test/test_matmul_op/: matmul_test.cpp
test/test_reduce_op/: reduce_sum_test.cpp
test/test_sort_op/: bitonic_sort_test.cpp
